--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
           <!-- Testimonial 1 -->
           <div
-            class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
+            class="flex flex-col items-center p-6 space-y-6 rounded-lg shadow-2xl bg-veryLightGray md:w-1/3"
           >
             <img src="img/avatar-anisha.png" class="w-16 -mt-14" alt="" />
             <h5 class="text-lg font-bold">Anisha Li</h5>
@@ -228,7 +228,7 @@
 
           <!-- Testimonial 2 -->
           <div
-            class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
+            class="hidden flex-col items-center p-6 space-y-6 rounded-lg shadow-2xl bg-veryLightGray md:flex md:w-1/3"
           >
             <img src="img/avatar-ali.png" class="w-16 -mt-14" alt="" />
             <h5 class="text-lg font-bold">Ali Bravo</h5>
@@ -241,7 +241,7 @@
 
           <!-- Testimonial 3 -->
           <div
-            class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
+            class="hidden flex-col items-center p-6 space-y-6 rounded-lg shadow-2xl bg-veryLightGray md:flex md:w-1/3"
           >
             <img src="img/avatar-richard.png" class="w-16 -mt-14" alt="" />
             <h5 class="text-lg font-bold">Richard Watts</h5>
